# 3DViewer_v2.0

./: Doxyfile  Makefile  README.md  description.h
3DViewer_v2_0/: CMakeLists.txt
3DViewer_v2_0/gif_lib/: gif2rgb.c  gif_err.c  gif_hash.h  gif_lib.h  gif_lib_private.h  gifalloc.c  openbsd-reallocarray.c
3DViewer_v2_0/model/: data.h  model.h  pars.cc
3DViewer_v2_0/model/command/: command.cc
3DViewer_v2_0/model/tests/: model_test.h
3DViewer_v2_0/resources/: resources.qrc
3DViewer_v2_0/view/memento/: memento.cc  memento.h
src/: main.cc
src/controller/: controller.cc  controller.h
src/gif_lib/: dgif_lib.c  egif_lib.c  getarg.h  gif_font.c  gif_hash.c  quantize.c
src/model/: model.cc  pars.h
src/model/command/: command.h
src/model/tests/: model_test.cc
src/view/: render.cc  render.h  view.cc  view.h  view.ui
